Convert to new shared asset distribution
This comes with the following changes:

* All executables renamed to "service.sr.ht-exe"
* Makefile
  - becomes standalone, setting SRHT_PATH no longer required
  - expects SCSS in $(PREFIX)/share/sourcehut
  - installs assets in $(PREFIX)/share/sourcehut
* Python module
  - no longer contains any static assets (except for the GQL schema)
  - setup.py reduced to stub
  - no longer calls `make` when building

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,18 +25,14 @@ packages = [
     "hubsrht.alembic",
     "hubsrht.alembic.versions",
     "hubsrht.blueprints",
-    "hubsrht.static",
-    "hubsrht.static.icons",
     "hubsrht.templates",
     "hubsrht.types",
 ]
 script-files = [
-    "hubsrht-initdb",
-    "hubsrht-migrate",
+    "hub.sr.ht-initdb",
+    "hub.sr.ht-migrate",
 ]
 [tool.setuptools.package-data]
 "hubsrht.templates" = ['*.html']
-"hubsrht.static" = ['*']
-"hubsrht.static.icons" = ['*']
 
 [tool.setuptools_scm]
