pyproject.toml: add services module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ packages = [
     "hubsrht.alembic",
     "hubsrht.alembic.versions",
     "hubsrht.blueprints",
+    "hubsrht.services",
     "hubsrht.templates",
     "hubsrht.types",
 ]
